WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>Created for AU Exxon Mobile Asia Pac (EMAP) project.</description>
    <label>Invoice</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>