WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Charge_Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>Charge_Late_Fee__c</fullName>
    <description>This field will be a formula to determine if late fee is applicable</description>
    <formula>IF( 
OR( 
AND( 
ISBLANK(Invoice_Paid_in_Full_On__c), 
(Payment_Due_Date__c &lt; TODAY())
), 
AND( 
NOT(ISBLANK(Invoice_Paid_in_Full_On__c)), 
(Payment_Due_Date__c &lt; Invoice_Paid_in_Full_On__c )
) 
), 
true, 
false 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Late Fee</label>
    <type>Checkbox</type>
</CustomField>