WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Closing_Balance__c.field-meta.xml
<CustomField>
    <fullName>Closing_Balance__c</fullName>
    <label>Closing Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>