WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/External_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Invoice_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Invoice ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>