WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/INVOICE_ISSUE_DATE__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_ISSUE_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Issue Date</label>
    <type>Date</type>
</CustomField>