WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Invoice_Paid_in_Full_On__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid_in_Full_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Paid in Full On</label>
    <type>Date</type>
</CustomField>