WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Is_Late_And_AOT__c.field-meta.xml
<CustomField>
    <fullName>Is_Late_And_AOT__c</fullName>
    <formula>IF(
NOT(ISBLANK( Late_And_AOT__c)) &amp;&amp; (Late_And_AOT__c == &apos;Yes&apos;),
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Late And AOT?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>