WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Is_Late_Payer__c.field-meta.xml
<CustomField>
    <fullName>Is_Late_Payer__c</fullName>
    <formula>IF(
OR(
AND(
ISBLANK(Invoice_Paid_in_Full_On__c),
(Payment_Due_Date__c + Account__r.Program__r.Late_Payer_Days__c ) &lt; TODAY()
),
AND(
NOT(ISBLANK(Invoice_Paid_in_Full_On__c)),
(Payment_Due_Date__c + Account__r.Program__r.Late_Payer_Days__c ) &lt; Invoice_Paid_in_Full_On__c 
)
),
true, 
false 
)</formula>
    <label>Is Late Payer?</label>
    <type>Checkbox</type>
</CustomField>