WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Late_And_AOT__c.field-meta.xml
<CustomField>
    <fullName>Late_And_AOT__c</fullName>
    <defaultValue>&apos;No&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Late And AOT</label>
    <length>5</length>
    <type>Text</type>
</CustomField>