WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Late_Payment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Late_Payment_Fee__c</fullName>
    <formula>IF(
Charge_Late_Fee__c  ,
Account__r.Program__r.Late_Fee_Percentage__c  * Total_Due__c *  Payment_Due_Date_Period__c ,
0)</formula>
    <label>Late Payment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>