WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Overdue_Days__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Days__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Overdue Days</label>
    <length>100</length>
    <type>Text</type>
</CustomField>