WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>