WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Payment_Due_Date_Period__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date_Period__c</fullName>
    <formula>IF(
NOT(ISBLANK(Invoice_Paid_in_Full_On__c )),
(Invoice_Paid_in_Full_On__c - Payment_Due_Date__c)/30,
(Today() - Payment_Due_Date__c)/30
)</formula>
    <label>Payment Due Date Period</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>