WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Total_Dishonours__c.field-meta.xml
<CustomField>
    <fullName>Total_Dishonours__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Dishonours</label>
    <length>100</length>
    <type>Text</type>
</CustomField>