WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Total_Dishonours_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Dishonours_Number__c</fullName>
    <formula>IF(ISNUMBER(Total_Dishonours__c), VALUE(Total_Dishonours__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Dishonours Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>