WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Total_Disputes__c.field-meta.xml
<CustomField>
    <fullName>Total_Disputes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Disputes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>