WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Payments</label>
    <length>50</length>
    <type>Text</type>
</CustomField>