WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Total_Purchase_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Value__c</fullName>
    <label>Total Purchase Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>