WexGit/Wex_DX/force-app/main/default/objects/Invoice__c/fields/Total_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchases__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Purchases</label>
    <length>100</length>
    <type>Text</type>
</CustomField>